[tool.poetry]
name = "glow-realnvp-tutorial"
version = "1.0.0"
description = "glow realnvp tutorial with tfp"
authors = ["MokkeMeguru <meguru.mokke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.1"
tensorflow-probability = "^0.11.1"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"
tqdm = "^4.53.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
